Adicionar título e favicon na tela de login

--- a/quatroestacoes/templates/quatroestacoes/login.html
+++ b/quatroestacoes/templates/quatroestacoes/login.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Login</title>
+    <title>Quatro Estações</title>
     <link
       rel="stylesheet"
       href="{% static 'quatroestacoes/login/css/style.css' %}"
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="{% static 'quatroestacoes/base/img/favicon.png' %}">
     <meta name="viewport" content="widht=device-widht, initial-scale=1.0" />
   </head>
 
