--- a/quatroestacoes/static/quatroestacoes/base/css/style.css
+++ b/quatroestacoes/static/quatroestacoes/base/css/style.css
@@ -153,181 +153,12 @@ img {
     justify-content: center;
 }
 
-.container-home {
-    display: flex;
-    text-align: center;
-    width: 100%;
-    height: 400px;
-}
-
 h3 {
     letter-spacing: 0.2em;
 }
 
 span {
     font-weight: bold;
-}
-
-.info-comunicados,
-.info-salao {
-    margin: 0 30px;
-}
-
-.info-comunicados,
-.info-salao {
-    background-color: rgba(186, 151, 64, 0.5);
-}
-
-.info-comunicados {
-    width: 70%;
-}
-
-.info-salao {
-    width: 30%;
-}
-
-.container-usuario {
-    display: flex;
-    justify-content: end;
-}
-
-.container-usuario p {
-    font-size: 0.75em;
-    line-height: 1em;
-    margin: 1em 1.25em 0 2.5em;
-}
-
-.info-nome {
-    font-weight: bold;
-}
-
-.icon-usuario {
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.container-moradores {
-    display: flex;
-    width: 100%;
-    text-align: center;
-    justify-content: space-between;
-    
-}
-
-.container-bloco {
-    width: 300px;
-    margin: 0 1em;
-    padding: 0 1em;
-    display: block;
-    height: 500px;
-}
-
-.container-bloco p {
-    text-align: left;
-}
-
-.container-bloco-a {
-    background-color: rgba(255, 0, 191, 0.15);
-}
-
-.container-bloco-a h3 {
-    padding: 0 0 20px;
-    border-bottom: 1px solid rgba(135, 1, 102, 0.8);
-}
-
-.container-bloco-b {
-    background-color: rgba(255, 247, 0, 0.15);
-}
-
-.container-bloco-b h3 {
-    padding: 0 0 20px;
-    border-bottom: 1px solid rgba(132, 84, 0, 0.8);
-}
-
-.container-bloco-c {
-    background-color: rgba(0, 255, 4, 0.15);
-}
-
-.container-bloco-c h3 {
-    padding: 0 0 20px;
-    border-bottom: 1px solid rgba(0, 133, 2, 0.8);
-}
-
-.container-bloco-d {
-    background-color: rgba(0, 0, 255, 0.15);
-}
-
-.container-bloco-d h3 {
-    padding: 0 0 20px;
-    border-bottom: 1px solid rgba(0, 0, 156, 0.8);
-}
-
-.container-div-morador {
-    width: 100%;
-    max-width: 600px;
-}
-
-.container-info-usuario {
-    background-color: rgba(186, 151, 64, 0.35);
-    padding: 1em;
-    margin: 0 0 2em;
-}
-
-.container-info-usuario p, .container-form-morador p {
-    text-align: left;
-}
-
-.container-lista-morador, .container-alterar-morador, .container-cadastrar-morador {
-    display: block;
-}
-
-.container-adicionar-morador {
-    margin: 0 0 2em;
-}
-
-.container-adicionar-morador a, .container-alterar-morador a, .container-cadastrar-morador input, .container-alterar-morador input {
-    background-color: rgba(186, 151, 64, 0.35);
-    border: none;
-    font-size: 17px;
-    font-weight: bold;
-}
-
-.container-cadastrar-morador input, .container-alterar-morador input {
-    background-color: rgba(142, 81, 40, 0.6);
-    color: white;
-}
-
-.container-adicionar-morador a {
-    padding: 10px;
-}
-
-.container-alterar-morador a {
-    margin: 20px 0;
-    padding: 10px;
-}
-
-.container-cadastrar-morador input, .container-alterar-morador input {
-    padding: 10px;
-}
-
-.container-form-morador {
-    background-color: rgba(186, 151, 64, 0.35);
-    padding: 1em;
-    margin: 0 0 2em;
-}
-
-.container-cadastrar-morador, .container-alterar-morador {
-    margin: 30px 0 0 0;
-}
-
-.container-div-form-morador {
-    width: 100%;
-    max-width: 600px;
-}
-
-.container-avisos, .container-reclamacoes, .container-reservas {
-    display: flex;
-    flex-direction: column;
 }
 
 @media screen and (max-width: 730px) {
@@ -412,5 +243,146 @@ span {
         margin-top: 1em;
     }
 
+}
+
+
+/* 
+.container-home {
+    display: flex;
+    text-align: center;
+    width: 100%;
+    height: 400px;
+}
+
+
+.info-comunicados,
+.info-salao {
+    margin: 0 30px;
+}
+
+.info-comunicados,
+.info-salao {
+    background-color: rgba(186, 151, 64, 0.5);
+}
+
+.info-comunicados {
+    width: 70%;
+}
+
+.info-salao {
+    width: 30%;
+} */
+
+.container-usuario {
+    display: flex;
+    justify-content: end;
+}
+
+.container-usuario p {
+    font-size: 0.75em;
+    line-height: 1em;
+    margin: 1em 1.25em 0 2.5em;
+}
+
+.info-nome {
+    font-weight: bold;
+}
+
+.icon-usuario {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.container-info-usuario {
+    background-color: rgba(186, 151, 64, 0.35);
+    padding: 1em;
+    margin: 0 0 2em;
+}
+
+.container-info-usuario p, .container-form-morador p {
+    text-align: left;
+}
+
+/* .container-lista-morador, .container-alterar-morador, .container-cadastrar-morador {
+    display: block;
+}
+
+.container-adicionar-morador {
+    margin: 0 0 2em;
+}
+
+.container-adicionar-morador a, .container-alterar-morador a, .container-cadastrar-morador input, .container-alterar-morador input {
+    background-color: rgba(186, 151, 64, 0.35);
+    border: none;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.container-cadastrar-morador input, .container-alterar-morador input {
+    background-color: rgba(142, 81, 40, 0.6);
+    color: white;
+} 
+
+.container-adicionar-morador a {
+    padding: 10px;
+}
+
+.container-alterar-morador a {
+    margin: 20px 0;
+    padding: 10px;
+}
+
+.container-cadastrar-morador input, .container-alterar-morador input {
+    padding: 10px;
+}
+
+.container-form-morador {
+    background-color: rgba(186, 151, 64, 0.35);
+    padding: 1em;
+    margin: 0 0 2em;
+} */
+
+.container-cadastrar-morador, .container-alterar-morador {
+    margin: 30px 0 0 0;
+}
+
+.container-form {
+    width: 100%;
+    max-width: 600px;
+    background-color: rgba(186, 151, 64, 0.35);
+    padding: 1em;
+    margin: 1em;
+}
+
+.container-form p {
+    text-align: left;
+}
+
+.container-lista {
+    max-width: 600px;
+    background-color: rgba(186, 151, 64, 0.35);
+    padding: 1em;
+    margin: 1em;
+}
+
+.btn-acao {
+    padding: 0.8em;
+    border: none;
+    font-size: 17px;
+    font-weight: bold;
+    background-color: rgba(142, 81, 40, 0.6);
+    color: white;
+}
+
+
+.btn-acao:hover {
+    cursor: pointer;
+}
+
+
+
+.container-avisos, .container-reclamacoes, .container-reservas {
+    display: flex;
+    flex-direction: column;
 }
 
