--- a/quatroestacoes/templates/quatroestacoes/moradores/adicionar.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/adicionar.html
@@ -4,16 +4,12 @@
 {% block titulo %}Adicionar morador{% endblock titulo %}
 
 {% block conteudo %}
-<div class="container-div-form-morador">
-    <div class="container-form-morador">    
+    <div class="container-form">    
         <form method="post">{% csrf_token %}
             <h3>CADASTRAR MORADOR</h3>
             <span>{{ form.as_p }}</span>
-            <div class="container-cadastrar-morador">
-                <input type="submit" value="Adicionar novo morador">
-            </div>
+            <button type="submit" class="btn-acao">Adicionar novo morador</button>
         </form>
     </div>
-</div>
 
 {% endblock conteudo %}
