--- a/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
@@ -4,11 +4,12 @@
 {% block titulo %}Reclamações{% endblock titulo %}
 
 {% block conteudo %}
-<div class="container-reclamacoes">
-    <div class="container-adicionar-morador">
-        <a href="{% url 'quatroestacoes:reclamacoes_add' %}">Criar reclamação</a>
+<div class="container-pagina-outros">
+    <div class="container-criar">
+        <a href="{% url 'quatroestacoes:reclamacoes_add' %}" class="btn-acao">Criar reclamação</a>
+        <br><br>
     </div>
-    <div class="container-info-usuario">
+    <div class="container-lista">
         {% if reclamacoes %}
             <ul style="padding: 0;">
             {% for reclamacao in reclamacoes %}
