--- a/quatroestacoes/templates/quatroestacoes/login.html
+++ b/quatroestacoes/templates/quatroestacoes/login.html
@@ -30,8 +30,8 @@
   <body>
     <div class="intro">
       <h1 class="logo-header">
-        <span class="logo" id="quatro">Quatro</span
-        ><span class="logo" id="estacoes">Estações</span>
+        <span class="logo" id="quatro">Quatro</span>
+        <span class="logo" id="estacoes">Estações</span>
       </h1>
     </div>
 
