--- a/quatroestacoes/static/quatroestacoes/login/css/style.css
+++ b/quatroestacoes/static/quatroestacoes/login/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;1,100;1,200&family=Roboto:wght@100&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 
 * {
   margin: 0;
@@ -618,13 +618,12 @@ input:-webkit-autofill {
   .content {
     height: 80%;
     width: 85%;
-  } 
+  }
 }
-
 
 @media screen and (max-height: 800px) {
   .content {
     height: 75%;
     width: 80%;
-  } 
+  }
 }
