--- a/quatroestacoes/templates/quatroestacoes/moradores/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/lista.html
@@ -7,7 +7,8 @@
 <div class="container-lista-morador">
     <div class="container-adicionar-morador">
         {% if request.user.is_staff %}
-            <a href="{% url 'quatroestacoes:moradores_add' %}">Adicionar morador</a> 
+            <a href="{% url 'quatroestacoes:moradores_add' %}" class="btn-acao">Adicionar morador</a> 
+            <br><br><br>
         {% endif %}
     </div>
     <div class="container-moradores">
