--- a/quatroestacoes/templates/quatroestacoes/reservas/adicionar.html
+++ b/quatroestacoes/templates/quatroestacoes/reservas/adicionar.html
@@ -2,10 +2,24 @@
 {% block titulo %}Reservar salão{% endblock titulo %}
 
 {% block conteudo %}
-    <div class="container-form">   
+    <div class="container-form">
+        {{ form.errors }} 
         <form method="post">{% csrf_token %}
             <h3>RESERVAR SALÃO DE FESTAS</h3>
-            <span>{{ form.as_p }}</span>
+                {% if request.user.is_staff %}
+                    <p>
+                        <span>Morador:</span> 
+                        {{ form.morador }}
+                    </p>
+                {% else %}
+                    <p>
+                        <span>Morador:</span> 
+                        <select id='id_morador' name='morador' required=''>
+                            <option value='{{ request.user.id }}' selected >{{ request.user }}</option>
+                        </select>
+                    </p>
+                {% endif %}
+                <p><span>Data:</span> {{ form.data }}</p>
             <button type="submit" class="btn-acao">Reservar salão</button>
         </form>
     </div>
