--- a/quatroestacoes/templates/quatroestacoes/avisos/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/lista.html
@@ -11,15 +11,15 @@
     </div>
     <div class="container-lista">
         {% if avisos %}
-            {% for aviso in avisos %}
-                <p style="border-bottom: 1px solid #694C00;">
-                    {{ aviso.data_postagem }} - {{ aviso.assunto }}<br>
-                    {{ aviso.corpo }}<br>
-                    {{ aviso.data_evento }}
-                    <br><br>
-                </p>
-                <br>
-            {% endfor %}
+            <ul style="padding: 0;">
+                {% for aviso in avisos %}
+                    <li style="border-bottom: 1px solid #694C00;">
+                        {{ aviso.data_postagem }} - {{ aviso.assunto }}<br>
+                        {{ aviso.corpo }}<br>
+                        {{ aviso.data_evento }}
+                    </li>
+                {% endfor %}
+            </ul>
         {% else %}
             <p>Nenhum aviso disponível.</p>
         {% endif %}
