Mudar cor dos botões de deletar para vermelho

--- a/quatroestacoes/static/quatroestacoes/base/css/style.css
+++ b/quatroestacoes/static/quatroestacoes/base/css/style.css
@@ -365,13 +365,21 @@ span {
   margin: 1em;
 }
 
-.btn-acao {
+.btn-acao, 
+.btn-deletar {
   padding: 0.8em;
   border: none;
   font-size: 17px;
   font-weight: bold;
-  background-color: rgba(142, 81, 40, 0.6);
   color: white;
+}
+
+.btn-acao {
+  background-color: rgba(142, 81, 40, 0.6);
+}
+
+.btn-deletar {
+  background-color: rgba(220, 0, 0, 0.6);
 }
 
 .btn-acao:hover {
