--- a/quatroestacoes/templates/quatroestacoes/moradores/deletar.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/deletar.html
@@ -1,13 +1,14 @@
 {% extends 'quatroestacoes/base.html' %}
 
 {% block active_moradores %}active{% endblock active_moradores %}
+{% block titulo %}Deletar morador{% endblock titulo %}
 
 {% block conteudo %}
     <div class="container-form"> 
         <form method="post">{% csrf_token %}
             <p style="text-align: center; font-size: 17px">Deseja mesmo apagar o morador "<span>{{ morador.first_name }} {{ morador.last_name }}</span>"?</p>
-            {{ form }}
-            <button type="submit" class="btn-acao">Apagar</button>
+            {{ form.as_p }}
+            <button type="submit" class="btn-deletar">Apagar</button>
         </form>
     </div>
 {% endblock conteudo %}
