--- a/quatroestacoes/templates/quatroestacoes/reservas/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reservas/lista.html
@@ -17,7 +17,7 @@
             {% endfor %}
             </ul>
         {% else %}
-            nenhuma reserva disponível
+            <p>Nenhuma reserva disponível</p>
         {% endif %}
     </div>
 </div>
