--- a/quatroestacoes/templates/quatroestacoes/avisos/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/lista.html
@@ -13,11 +13,14 @@
         {% if avisos %}
             <ul style="padding: 0;">
                 {% for aviso in avisos %}
-                    <li style="border-bottom: 1px solid #694C00;">
-                        <a href="{% url 'quatroestacoes:avisos_info' aviso.id %}">{{ aviso.data_postagem }} - {{ aviso.assunto }}<br><br></a>
+                    <li style="border-bottom: 1px solid #694C00; text-align: left">
+                        <a href="{% url 'quatroestacoes:avisos_info' aviso.id %}"><span>{{ aviso.data_postagem }} - {{ aviso.assunto }}</span><br><br></a>
                         {{ aviso.corpo|truncatechars:70 }}<br><br>
-                        {{ aviso.data_evento }}
+                        {% if aviso.data_evento != None %}
+                            {{ aviso.data_evento }}<br><br>
+                        {% endif %}
                     </li>
+                    <br>
                 {% endfor %}
             </ul>
         {% else %}
