--- a/quatroestacoes/templates/quatroestacoes/avisos/info.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/info.html
@@ -1,4 +1,5 @@
 {% extends 'quatroestacoes/base.html' %}
+{% block titulo %}Aviso{% endblock titulo %}
 
 {% block conteudo %}
     <div class="container-form">
