--- a/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
@@ -13,11 +13,19 @@
         {% if reclamacoes %}
             <ul style="padding: 0;">
             {% for reclamacao in reclamacoes %}
-                <li style="border-bottom: 1px solid #694C00;">
-                    {{ reclamacao.get_tipo_display }}<br><br>
-                    {{ reclamacao.data_postagem }} - {{ reclamacao.assunto }}<br><br>
-                    {{ reclamacao.corpo }}
+                <li style="border-bottom: 1px solid #694C00; text-align: left">
+                    <a href="{% url 'quatroestacoes:reclamacoes_info' reclamacao.id %}">
+                        {% if reclamacao.get_tipo_display == 'Reclamação' %}
+                            <span style="color: rgb(220, 0, 0)">{{ reclamacao.get_tipo_display|upper }}</span><br>
+                        {% else %}
+                            <span style="color: rgb(0, 140, 0)">{{ reclamacao.get_tipo_display|upper }}</span><br>
+                        {% endif %}
+                        <span>{{ reclamacao.data_postagem }} - {{ reclamacao.assunto }}</span><br><br>
+                    </a>
+
+                    {{ reclamacao.corpo|truncatechars:70 }}<br><br>
                 </li>
+                <br>
             {% endfor %}
             </ul>
         {% else %}
