Adicionar título da página

--- a/quatroestacoes/templates/quatroestacoes/reclamacoes/info.html
+++ b/quatroestacoes/templates/quatroestacoes/reclamacoes/info.html
@@ -1,4 +1,5 @@
 {% extends 'quatroestacoes/base.html' %}
+{% block titulo %}Reclamação{% endblock titulo %}
 
 {% block conteudo %}
     <div class="container-form">
