--- a/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
@@ -20,9 +20,11 @@
                         {% else %}
                             <span style="color: rgb(0, 140, 0)">{{ reclamacao.get_tipo_display|upper }}</span><br>
                         {% endif %}
-                        <span>{{ reclamacao.data_postagem }} - {{ reclamacao.assunto }}</span><br><br>
+                        <span>
+                            {{ reclamacao.data_postagem }}<br><br>
+                            <span style="font-size: 1.2em;">{{ reclamacao.assunto }}</span>
+                        </span><br>
                     </a>
-
                     {{ reclamacao.corpo|truncatechars:70 }}<br><br>
                 </li>
                 <br>
