Implementar 'esqueci minha senha'

--- a/quatroestacoes/templates/quatroestacoes/login.html
+++ b/quatroestacoes/templates/quatroestacoes/login.html
@@ -86,7 +86,7 @@
               {{ form.password }}
             </label> 
 
-            <a class="password" href="#">Esqueceu sua senha?</a>
+            <a class="password" href="{% url 'password_reset' %}">Esqueceu sua senha?</a>
             <button type='submit' class="btn btn-second">Fazer Login</button>
           </form>
         </div>
