--- a/quatroestacoes/templates/quatroestacoes/login.html
+++ b/quatroestacoes/templates/quatroestacoes/login.html
@@ -92,7 +92,9 @@
         </div>
       </div>
     </div>
-
+    <script>
+      document.getElementById("id_username").blur()
+    </script>
     <script src="{% static 'quatroestacoes/login/js/app.js' %}"></script>
   </body>
 </html>
