--- a/quatroestacoes/static/quatroestacoes/calendario/css/calendario.css
+++ b/quatroestacoes/static/quatroestacoes/calendario/css/calendario.css
@@ -1,106 +1,105 @@
-.box-calendario{
-    margin: 2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.box-calendario {
+  margin: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container-calendario{
-    padding: 2em;
-    max-width: 500px;
-    max-height: 500px;
-    background-color: rgba(255, 255, 255, 0.674);
-    align-items: center;
-    justify-content: center;
+.container-calendario {
+  padding: 2em;
+  max-width: 500px;
+  max-height: 500px;
+  background-color: rgba(255, 255, 255, 0.674);
+  align-items: center;
+  justify-content: center;
 }
 
-.month{
-    height: 2em;
-    padding: 0.5em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.month {
+  height: 2em;
+  padding: 0.5em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.month i{
-    font-size: 1rem;
-    cursor: pointer;
+.month i {
+  font-size: 1rem;
+  cursor: pointer;
 }
 
-.month h1{
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;   
-    font-weight: bold;
-    
+.month h1 {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  font-weight: bold;
 }
 
-.month h2{
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
+.month h2 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
-
-
 
 .month p {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
-.weekdays{
-    width: 100%;
-    height: 4em;
-    padding: 0.5em 0 0;
-    display: flex;
-    align-items: center;
+.weekdays {
+  width: 100%;
+  height: 4em;
+  padding: 0.5em 0 0;
+  display: flex;
+  align-items: center;
 }
 
-.weekdays div{
-    font-weight: bold;
-    letter-spacing: 0.2em;
-    letter-spacing: 0.1rem;
-    width: calc(44.2rem/7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.weekdays div {
+  font-weight: bold;
+  letter-spacing: 0.2em;
+  letter-spacing: 0.1rem;
+  width: calc(44.2rem / 7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.days{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0.2rem;
+.days {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.2rem;
 }
 
-.days div{
-    margin: 0.3rem;
-    width: calc(26.5rem/7);
-    height: 3em;
-    display: flex;
-    justify-content: center;
-    align-items: center;  
+.days div {
+  margin: 0.3rem;
+  width: calc(26.5rem / 7);
+  height: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.days div:hover:not(.today, .evento){
+.prev-date,
+.next-date {
+  opacity: 0.7;
+}
+
+.normal:hover {
     background-color: #e3ca8d;
+  }
+  
+
+.hoje {
+  background-color: #e3ca8d;
+  outline: 2px solid black;
 }
 
-.prev-date, .next-date {
-    opacity: 0.7;
-}
-
-.today{
-    background-color: #e3ca8d;
-    outline: 2px solid black;
-}
-
-.today:hover {
-    background-color: #cfab59;
+.hoje:hover {
+  background-color: #cfab59;
 }
 
 .reserva {
-    background-color: #7AFA00;
+  background-color: #7afa00;
 }
 
 .reserva:hover {
-    background-color: #63cb00;
+  background-color: #63cb00 !important;
 }
