--- a/quatroestacoes/static/quatroestacoes/calendario/css/calendario.css
+++ b/quatroestacoes/static/quatroestacoes/calendario/css/calendario.css
@@ -82,10 +82,11 @@
   opacity: 0.7;
 }
 
-.normal:hover {
-    background-color: #e3ca8d;
-  }
-  
+.normal:hover,
+.prev-date:hover,
+.next-date:hover {
+  background-color: #e3ca8d;
+}
 
 .hoje {
   background-color: #e3ca8d;
