--- a/quatroestacoes/static/quatroestacoes/calendario/css/calendario.css
+++ b/quatroestacoes/static/quatroestacoes/calendario/css/calendario.css
@@ -1,10 +1,3 @@
-.box-calendario {
-  margin: 2em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .container-calendario {
   padding: 2em;
   max-width: 500px;
@@ -12,6 +5,7 @@
   background-color: rgba(255, 255, 255, 0.674);
   align-items: center;
   justify-content: center;
+  height: max-content;
 }
 
 .month {
@@ -23,9 +17,11 @@
 }
 
 .month i {
-  font-size: 1rem;
+  flex: 1;
+  font-size: 2em;
   cursor: pointer;
 }
+
 
 .month h1 {
   font-size: 1.2rem;
@@ -103,4 +99,8 @@
 
 .reserva:hover {
   background-color: #63cb00 !important;
+}
+
+.date {
+  min-width: 65%;
 }
