--- a/quatroestacoes/templates/quatroestacoes/login.html
+++ b/quatroestacoes/templates/quatroestacoes/login.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="{% static 'quatroestacoes/base/img/favicon.png' %}">
-    <meta name="viewport" content="widht=device-widht, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
