Escurecer sombra da tela de login

--- a/quatroestacoes/static/quatroestacoes/login/css/style.css
+++ b/quatroestacoes/static/quatroestacoes/login/css/style.css
@@ -191,7 +191,7 @@ body {
 
 .first-content {
   display: flex;
-  box-shadow: 0 0 3em #d8d8d8;
+  box-shadow: 0 0 3em #a6a6a6;
 }
 
 .first-content .second-column {
