--- a/quatroestacoes/templates/quatroestacoes/index.html
+++ b/quatroestacoes/templates/quatroestacoes/index.html
@@ -11,6 +11,18 @@
     
         <div class="info-salao">
             <h3>SALÃO DE FESTAS</h3>
+            {% if reservas %}
+                <ul style="padding: 10%; text-align: left;">
+                {% for reserva in reservas %}
+                    <li style="border-bottom: 1px solid #694C00;">
+                        <span>{{ reserva.data }}</span><br>
+                        {{ reserva.morador.first_name }} {{ reserva.morador.last_name }}<br><br>
+                    </li><br>
+                {% endfor %}
+                </ul>
+            {% else %}
+                <p>Nenhuma reserva disponível</p>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
